--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.url=jdbc:h2:mem:employees
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=jca
 spring.datasource.password=password
+spring.h2.console.enabled=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
